2008-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Postrelease bump to 2.17.1.

2008-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	Update new file for 2.17.0.

2008-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_button):
	Do not draw default indicator, if the button is disabled.

2008-11-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix the bg color of GtkViewport and GtkScrolledWindow in notebooks.

2008-10-18  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/mist/src/mist-style.c:
	Make mist_style_draw_focus static.

2008-10-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_box):
	Let's return when detail is buttondefault, should fix #555890.

2008-10-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init), (clearlooks_rc_style_parse),
	(clearlooks_rc_style_merge):
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters),
	(clearlooks_style_init_from_rc), (clearlooks_style_draw_focus),
	(clearlooks_style_copy):
	* engines/clearlooks/src/clearlooks_style.h:
	* schema/clearlooks.xml.in.in:
	Added a disable_focus option for documentation purpose.

2008-10-06  Thomas Wood  <thos@gnome.org>

	* engines/mist/src/mist-style.c: (mist_style_draw_focus),
	(mist_style_class_init): Style the focus indicator in Mist

2008-09-27  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	Version bump to 2.17.0.

2008-09-27  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/torturetest.c:
	Add the new icon view detail strings to the torture tester.

2008-09-27  Denis Washington  <denisw@svn.gnome.org>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_glossy.c: